--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -293,7 +293,7 @@ footer{
   }
 }
 .assinatura{
-  padding: 30px 0 15px;
+  padding: 15px 0 15px;
   background-color: #3a3a3b;
   color: #FFF;
   @media (max-width: 768px){
@@ -303,4 +303,8 @@ footer{
     max-width: 320px;
     margin: 0 auto;
   }
+}
+
+.produtos{
+  border: 1px solid red;
 }
