--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,10 +4,16 @@ $cinza: #5b5b5f;
 $cinza-rodape: #c3c5ca;
 $hamburger-layer-color: #333;
 
+$container-lg: 960px;
+$container-md: 840px;
+
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "bower_components/css-hamburgers/_sass/hamburgers/hamburgers.scss";
 // endbower
+@import "bower_components/font-awesome/scss/font-awesome";
+@import "bower_components/slick-carousel/slick/slick.scss";
+@import "bower_components/slick-carousel/slick/slick-theme.scss";
 
 /* Space out content a bit */
 body {
@@ -52,7 +58,8 @@ p{
         padding: 0;
         top: 60px;
         right: 0;
-        left: 0
+        left: 0;
+        z-index: 10;
       }
       li{
         display: flex;
@@ -84,11 +91,23 @@ p{
   div{
     background-repeat: no-repeat;
     background-size: cover;
-    height: 400px;
+    height: 450px;
     background-position: center center;
     @media (max-width: 768px){
       height: 200px;
     }
+  }
+}
+
+.banner{
+  @media (min-width: 768px){
+    margin-top: 60px;
+  }
+  &>div{
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 200px;
   }
 }
 .content{
@@ -266,6 +285,7 @@ footer{
   padding: 30px 0;
   background-color: $cinza-rodape;
   color: $cinza;
+  font-size: 12px;
   p{
     text-align: left;
     @media (max-width: 768px){
@@ -274,8 +294,7 @@ footer{
     }
   }
   .logo-footer{
-    display: block;
-    margin: 0 auto;
+    //
   }
   nav{
     @media (max-width: 768px){
@@ -307,4 +326,70 @@ footer{
 
 .produtos{
   border: 1px solid red;
+}
+
+/* QUEM SOMOS */
+.sobre{
+  margin: 60px 0 120px;
+  h2{
+    margin-bottom: 30px;
+  }
+  h4{
+    font-weight: bold;
+    color: #5b5b5f;
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
+  p{
+    font-size: 14px;
+    color: #5b5b5f;
+  }
+
+}
+/* Contato */
+.contato{
+  margin: 60px 0;
+  iframe{
+    width: 100%;
+  }
+  ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 30px;
+    li{
+      margin-bottom: 5px;
+      color: #5b5b5f;
+      i{
+        color: #9da53b;
+        margin-right: 10px;
+      }
+      a{
+        color: #5b5b5f;
+      }
+    }
+  }
+  h2{
+    margin-bottom: 35px;
+  }
+  form{
+    @media (max-width:  768px){
+      margin-bottom:  60px;
+    }
+    input, textarea{
+      outline: 0;
+      width: 100%;
+      border: none;
+      padding: 10px 15px;
+    }
+    .enviar{
+      max-width: 150px;
+      height: 28px;
+      padding: 0;
+      background-color: #9da53b;
+      color: #FFF;
+      text-transform: uppercase;
+      border-radius: 3px;
+    }
+  }
 }
