--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -187,6 +187,25 @@ p{
     }
   }
 }
+a.btn{
+  background-color: $verde;
+  color: #FFF;
+  text-transform: uppercase;
+  display: inline-block;
+  max-width: 150px;
+  float: right;
+  transition: all .4s ease;
+  @media (max-width: 768px){
+    float: none;
+    display: block;
+    width: 100%;
+    margin: 20px auto;
+  }
+  &:hover{
+    transform: scale(1.1);
+    box-shadow: 1px 2px 10px #666;
+  }
+}
 .btn-green{
   background-color: $verde;
   color: #FFF;
@@ -324,10 +343,6 @@ footer{
   }
 }
 
-.produtos{
-  border: 1px solid red;
-}
-
 /* QUEM SOMOS */
 .sobre{
   margin: 60px 0 120px;
@@ -390,6 +405,36 @@ footer{
       color: #FFF;
       text-transform: uppercase;
       border-radius: 3px;
+    }
+  }
+}
+/* PAGE PRODUTOS */
+.produtos{
+  .banner, .conheca{
+    margin-bottom: 60px;
+  }
+
+  h3,h2{
+    margin-bottom: 30px;
+  }
+  .nossos-produtos{
+    margin-bottom: 60px;
+    .bar-produtos{
+      color: #FFF;
+      padding: 13px;
+      background-image: url('../images/produtos-title.jpg');
+      background-size: cover;
+      background-position: center;
+      border-radius: 5px;
+    }
+    .content__item{
+      margin-top: 40px;
+      h3, p, img{
+        @media (max-width: 768px){
+          display: block;
+          margin: 0 auto;
+        }
+      }
     }
   }
 }
